# tree-sitter-trafficscript

./: Cargo.toml  README.md  binding.gyp  grammar.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: arrays.txt  comments.txt  do_statements.txt  for_statements.txt  foreach.txt  functions.txt  hashes.txt  if_statements.txt  imports.txt  statements.txt  strings.txt  switches.txt  variables.txt  while_statements.txt
examples/: function.rbts  test.rbts
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.cc
