[package]
name = "tree-sitter-trafficscript"
description = "Riverband trafficscript grammar for the tree-sitter parsing library"
version = "0.1.0"
authors = [
    "Pong Lam <pg051285@gmail.com>",
]
license = "MIT"
keywords = ["incremental", "parsing", "trafficscript", "riverband"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-trafficscript"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.19"

[build-dependencies]
cc = "1.0"
